...
                                    <action selector="requestTaxi:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aaL-3t-79D"/>
                                </connections>
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YdI-Dz-a3E">
                                <rect key="frame" x="12" y="72" width="576" height="67"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="ADDRESS" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oiL-a8-AJF">
                                        <rect key="frame" x="43" y="8" width="490" height="50"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LDU-Fj-1p7">
                                        <rect key="frame" x="548" y="23" width="20" height="20"/>
...
                                        <color key="backgroundColor" red="1" green="0.87450980389999999" blue="0.08235294118" alpha="1" colorSpace="calibratedRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="308" id="MhC-xL-4N9"/>
                                            <constraint firstAttribute="height" constant="43" id="toZ-aA-A3e"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                        <state key="normal" title="Register">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="didTouchAllowLocation:" destination="ioj-dj-91X" eventType="touchUpInside" id="JnN-9g-hQ4"/>
                                            <action selector="registerUser:" destination="Ehd-ud-eZn" eventType="touchUpInside" id="PBk-NP-amV"/>
                                        </connections>
...
